[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/NPC.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/NPC.gd" type="Script" id=4]
[ext_resource path="res://UI/Dialogue.gd" type="Script" id=5]
[ext_resource path="res://UI/UI.gd" type="Script" id=6]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 100, 0.5, 100 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 50, 0.25, 50 )

[sub_resource type="SphereShape" id=3]
radius = 7.957

[node name="Game" type="Spatial"]

[node name="Ground" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 2 )

[node name="EnemyContainer" type="Spatial" parent="."]
visible = false

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.307199, 3.53144 )
script = ExtResource( 2 )

[node name="Pivot" type="Position3D" parent="Player"]

[node name="Camera" type="Camera" parent="Player/Pivot"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.5, 4, -6 )

[node name="NPC" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.75186, 0.871353, 0 )
script = ExtResource( 4 )

[node name="Area" type="Area" parent="NPC"]

[node name="CollisionShape" type="CollisionShape" parent="NPC/Area"]
shape = SubResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="UI"]
anchor_right = 1.0
margin_bottom = 30.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Score" type="Label" parent="UI"]
margin_left = 10.0
margin_right = 510.0
margin_bottom = 30.0
text = "Score:"
valign = 1

[node name="Time" type="Label" parent="UI"]
margin_left = 512.0
margin_right = 1014.0
margin_bottom = 30.0
text = "Timer: 00:00"
align = 2
valign = 1

[node name="Timer" type="Timer" parent="UI"]

[node name="Dialogue" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="UI/Dialogue"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -30.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Text" type="RichTextLabel" parent="UI/Dialogue"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_bottom = 10.0
bbcode_enabled = true
bbcode_text = "[center]Hello[/center]"
text = "Hello"

[connection signal="body_entered" from="NPC/Area" to="NPC" method="_on_Area_body_entered"]
[connection signal="body_exited" from="NPC/Area" to="NPC" method="_on_Area_body_exited"]
[connection signal="timeout" from="UI/Timer" to="UI" method="_on_Timer_timeout"]
